add setting remote store
