# src/settings/server/db-entities.ts
@@ -1,0 +1,6 @@
+import {sqliteTable, text} from "drizzle-orm/sqlite-core";
+
+export const settings = sqliteTable("settings", {
+    id: text("id").primaryKey(),
+    data: text("data"),
+})
